take working snapshot